# poker-modelling

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  init.sql  pyproject.toml
backend/app/: README.md  main.py
backend/app/database/: __init__.py  connection.py
backend/app/models/: __init__.py  game.py
backend/app/repositories/: __init__.py  base.py  hand_repository.py
backend/app/routes/: hands.py
backend/app/services/: __init__.py  game_service.py  poker_engine.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/game/: ActionPanel.tsx  BoardCards.tsx  GameSetup.tsx  GameTable.tsx  HandHistory.tsx  PlayerSeat.tsx
frontend/src/lib/: store.ts
frontend/src/lib/features/game/: gameSlice.ts
